[gd_scene load_steps=4 format=2]

[ext_resource path="res://Starmap/Starmap.gd" type="Script" id=1]
[ext_resource path="res://Starmap/Star.tscn" type="PackedScene" id=2]
[ext_resource path="res://Starmap/destination_indicator.png" type="Texture" id=3]

[node name="Starmap" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsFolder" type="Node2D" parent="."]

[node name="Star" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star2" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star3" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star4" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star5" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star6" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star7" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star8" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star9" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star10" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star11" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star12" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star13" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star14" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="Star15" parent="StarsFolder" instance=ExtResource( 2 )]

[node name="PlayerIndicator" type="Sprite" parent="."]

[node name="DestinationIndicator" type="Sprite" parent="."]
texture = ExtResource( 3 )
